recording: copy reverses its dst and src parameters

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55799